tests/fixtures/invalid/divmod_list_str.py
# Cannot call divmod() with List[int], Str
x = divmod([1, 2, 3], "hello")
